--- a/.github/workflows/runthisshit.yaml
+++ b/.github/workflows/runthisshit.yaml
@@ -19,4 +19,4 @@ jobs:
                 pip install -r requirements.txt
         - name: Run tests
           run: |
-                python -m unittest discover .
+                python -m unittest fuckallToFrontEnd_Test.py
