--- a/.github/workflows/unit_testing.yaml
+++ b/.github/workflows/unit_testing.yaml
@@ -1,6 +1,9 @@
 name: Python application test with Github Actions
 
-on: [push, pull_request]
+on:
+  push:
+    branches:
+      - main
 
 jobs:
   build:
@@ -18,5 +21,8 @@ jobs:
           pip install -r requirements.txt
       - name: Run tests
         run: |
-          python -m unittest maha_db_to_frontend_test.py
+          python -m unittest maha_nhtsa_to_s3_test.py
           python -m unittest maha_s3_to_mysql_test.py
+          python -m unittest maha_db_to_frontend_test.py
+          python -m unittest FetchUserReviews_test.py
+          python -m unittest userReviewsPublishTest.py
